--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,6 +14,7 @@
         <li><%= link_to "Home", root_path %></li>
         <li class="active"><%= link_to "Match", match_path %></li>
         <li><%= link_to "About", about_path %></li>
+        <li><%= link_to "Login", login_path %></li>
       </ul>
       
 
