--- a/app/views/amnests/registrations/new.html.erb
+++ b/app/views/amnests/registrations/new.html.erb
@@ -3,9 +3,19 @@
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { class: 'form-horizontal'}) do |f| %>
   <%= f.error_notification %>
 
-  <%= f.input :email %>
-  <%= f.input :password %>
-  <%= f.input :password_confirmation %>
+<ul class="form_style">
+	<%= f.input :first_name, label_html: { class: 'form_padding' } %>
+	<%= f.input :last_name, label_html: { class: 'form_padding' } %>
+	<%= f.input :birthday, label_html: { class: 'form_padding'} %>
+  <%= f.input :email, label_html: { class: 'form_padding' } %>
+  <%= f.input :password, label_html: { class: 'form_padding' } %>
+  <%= f.input :password_confirmation, label_html: { class: 'form_padding' } %>
+	<%= f.input :story, label_html: { class: 'form_padding'} %>
+	<%= f.input :location_from, label_html: { class: 'form_padding'} %>
+	<%= f.input :location_to, label_html: { class: 'form_padding'} %>
+	<%= f.input :dates, label: 'Travel Dates', label_html: { class: 'form_padding'} %>
+</ul>
+
 
   <div class="form-actions">
     <%= f.submit "Sign up", class: "btn btn-primary" %>
