--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
           <li><%= link_to "Logout", destroy_amnest_session_path, method: :delete %> </li>
         <% else %>
           <li> <%= link_to "Donor Login", new_donor_session_path %> </li>
-          <li> <%= link_to "Amnest Login", new_amnest_registration_path %> </li>
+          <li> <%= link_to "Amnest Login", new_amnest_session_path %> </li>
         <% end %>
   
       </ul> 
