--- a/app/views/pages/flight.html.erb
+++ b/app/views/pages/flight.html.erb
@@ -1,7 +1,9 @@
 <h1> World S'MILES Flight</h1>
 
-<iframe src="http://bl.ocks.org/mpmckenna8/8894003" width= "1000" height= "800">
-          </iframe>
+<iframe width='100%' height='500px' frameBorder='0' src='http://a.tiles.mapbox.com/v3/ckc653.h815d7pg/mm/zoompan,zoomwheel,geocoder,share.html'></iframe>
+
+<!-- <iframe src="http://bl.ocks.org/mpmckenna8/8894003" width= "1000" height= "800">
+          </iframe> -->
 
 
 <!-- <!DOCTYPE html>
