fixed index view

--- a/app/views/miles/indexsecret.html.erb
+++ b/app/views/miles/indexsecret.html.erb
@@ -6,7 +6,7 @@
     <tr>
       <th>Airline</th>
       <th>Rewards</th>
-      <th></th>
+      <th>Email</th>
       <th></th>
       <th></th>
       <th></th>
@@ -18,13 +18,13 @@
       <tr>
         <td><%= mile.airline %></td>
         <td><%= mile.rewards %></td>
+        <td><%= mile.email %></td>
+        <td><%= link_to 'Show', mile %></td>
+        <td><%= link_to 'Edit', edit_mile_path(mile) %></td>
+        <td><%= link_to 'Destroy', mile, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 </div>
 <br>
-
-<%= link_to 'New Mile', new_mile_path %>
-<br />
-<%= link_to 'Airlines', airlines_path %>
